Fixed nav overlap

--- a/site/web/app/themes/sage/resources/assets/styles/common/_layout.scss
+++ b/site/web/app/themes/sage/resources/assets/styles/common/_layout.scss
@@ -16,30 +16,32 @@
 	width: 100%;
 	display: flex;
 	position: relative;
-	&--outer { 
+	&--outer {
 		border: 1px solid black;
 		justify-content: center;
 		width: 100vw;
-		margin: 0 auto; 
+		margin: 0 auto;
 		margin-bottom: 4em;
 	}
 }
 
-.container-inner { 
+.container-inner {
 	margin: 0 auto;
 	max-width: $max-width-inner;
-	
-	@media screen and ( min-width: $breakpoint--lg ) {
+
+	@media screen and (min-width: $breakpoint--lg) {
 		max-width: $max-width-inner;
 	}
-	 
 }
 
 .flex-container {
+	max-width: 100vw;
 	min-height: 100vh;
 	display: flex;
 	align-items: flex-start;
 	flex-wrap: wrap;
+	overflow-x: hidden;
+
 	& > * {
 		flex: 1 1 100%;
 	}
